[package]
name = "web-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { version = "0.1.88", default-features = false }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", default-features = false, features = ["typed-header"] }
chrono = { version = "0.4.41", default-features = false, features = ["serde", "now"] }
derive-new = { version = "0.7.0", default-features = false }
libsqlite3-sys = { version = "^0.30.1", default-features = false, optional = true }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "chrono", "derive", "sqlite"] }
tokio = { version = "1.45.1", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }

simple-jwt = { git = "https://github.com/2bitcpu/simple-jwt" }
async-argon2 = { git = "https://github.com/2bitcpu/async-argon2" }
tower = { version = "0.5.2", default-features = false, features = ["timeout"] }

[features]
libsqlite3-sys = ["dep:libsqlite3-sys"]

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
codegen-units = 1
panic = "abort"

# cargo +nightly-2025-02-20 build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target aarch64-unknown-linux-gnu --release
# upx --best --lzma ./target/aarch64-unknown-linux-gnu/release/web-api
